<resources>
    <string name="app_name">SoftDigital</string>

    <string name="prompt_name">Primeiro e último nome</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_regime">Regime em que se encontra</string>
    <string name="prompt_password">Senha de acesso</string>
    <string name="prompt_Confirmpassword">Confirmar senha de acesso</string>
    <string name="error_doesntmach_password">A senha de acesso não coincide</string>
    <string name="action_sign_in">Autenticar</string>
    <string name="action_sign_register">Registar</string>
    <string name="action_sign_register_user">Registar utilizador</string>
    <string name="register_sucess">Utilizador registado com sucesso</string>
    <string name="register_failed">Utilizador já está registado</string>
    <string name="email_verification_sucess">Verificação da conta enviado para o email: </string>
    <string name="email_verification_failed">Erro ao enviar a verificação da conta</string>
    <string name="auth_failed">Falha na autenticação</string>
    <string name="have_account">Já tem conta?</string>
    <string name="to">Para:</string>
    <string name="file">Documento</string>

    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">Senha de acesso demasiado pequena</string>
    <string name="error_incorrect_password">Senha de acesso incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>

    <string name="fingerPrint_sucess">Impressão digital com sucesso</string>
    <string name="fingerPrint_failed">Falha na impressão digital</string>
    <string name="fingerPrint_notsupport">O seu dispositivo não suporta impressão digital</string>
    <string name="fingerPrint_permissiondenied">Por favor ative a permissão da impressão digital</string>
    <string name="fingerPrint_notconfigured">Não tem nenhuma impressão digital configurada. Por favor, configure nas Definições do seu dispositivo</string>

    <string name="select_file">Selecione o documento</string>
    <string name="click_select_file">Clique para selecionar o documento</string>
    <string name="no_file_select">Nenhum documento selecionado</string>
    <string name="upload_file">Inserir documento</string>
    <string name="select_file_permissiondenied">Por favor ative a permissão para aceder aos documentos</string>
    <string name="upload_file_success">Documento carregado com sucesso</string>
    <string name="upload_file_failed">Erro ao carregar o documento</string>
    <string name="uploading_file">A carregar documento...</string>
    <string name="selected_file">Documento selecionado: </string>
    <string name="pdf_file_name">Insira o nome do documento</string>
    <string name="please_insert_pdf_file_name">Por favor, insira o nome do documento</string>
    <string name="files">Documentos</string>
    <string name="sign_and_send">Assinar e enviar</string>
    <string name="settings">Definições</string>
    <string name="waiting_for_signature">A aguardar por outros</string>
    <string name="for_signing">É necessário assinar</string>
    <string name="loading">A carregar…</string>
    <string name="file_name">Nome do documento</string>
    <string name="send_to">Enviado por:</string>

    <string name="all_documents">Todos os documentos</string>
    <string name="necessary_sign">É necessário assinar</string>
    <string name="waiting_for_others_signatures">A aguardar por outros</string>
    <string name="done">Concluído</string>
    <string name="waiting_signature_from">Aguarda assinatura de: </string>
    <string name="signature_pendent">Documento para assinatura pendente</string>
    <string name="status_file">Estado:</string>
    <string name="new_file">"Novo Documento"</string>

    <string name="send_to_receiver">Enviar para destinatário</string>
    <string name="sign">Assinar documento</string>
    <string name="add_signature_field">Adicionar campo para assinatura</string>
    <string name="sucessful_send_message">Mensagem enviada com sucesso</string>
    <string name="error_send_message">Erro ao enviar a mensagem. Tente novamente mais tarde.</string>

    <string name="add_contacts">Adicionar contacto</string>
    <string name="add_contact_send_message">Pedido Enviado</string>
    <string name="contact_request">Pedido de Contacto</string>
    <string name="request_accept">Aceitar</string>
    <string name="sucessful_add_contact">Contacto adicionado com sucesso</string>
    <string name="contacts">Contactos</string>

    <string name="add_signature">Adicionar assinatura</string>
    <string name="no_add_signature">Sem assinatura</string>
    <string name="sign_here">Assine aqui:</string>
    <string name="save">Guardar</string>
    <string name="clear">Limpar</string>
    <string name="undo">Desfazer</string>
    <string name="redo">Refazer</string>
    <string name="nothing_to_undo">Nada para desfazer</string>
    <string name="nothing_to_redo">Nada para refazer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
