<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/icon_user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contact_username_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/contact_userEmail_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_email"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/contact_userRegime_editView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_regime"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>