<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="#FFC107"
            app:tabTextColor="#fff">

            <android.support.design.widget.TabItem
                android:id="@+id/AllDocuments_TabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@mipmap/todos_documentos"
                android:text="@string/all_documents" />

            <android.support.design.widget.TabItem
                android:id="@+id/NecessarySign_TabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@mipmap/assinar"
                android:text="@string/necessary_sign" />

            <android.support.design.widget.TabItem
                android:id="@+id/WaitingSignatures_TabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@mipmap/espera_assinatura"
                android:text="@string/waiting_for_others_signatures" />

            <android.support.design.widget.TabItem
                android:id="@+id/Done_TabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@mipmap/concluido"
                android:text="@string/done" />

        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></android.support.v4.view.ViewPager>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".StatusDocumentsActivity" />
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>