<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FileUpload">

    <Button
        android:id="@+id/select_file_button"
        android:layout_width="137dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="139dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="499dp"
        android:background="@drawable/button_rounded_trns"
        android:text="@string/select_file"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="395dp"
        android:text="@string/no_file_select" />

    <Button
        android:id="@+id/upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="133dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="224dp"
        android:text="@string/upload_file"
        android:background="@drawable/button_rounded"
        android:textColor="#fff"/>

    <Button
        android:id="@+id/view_pdf_files_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="100dp"
        android:text="Ver ficheiros"
        android:background="@drawable/button_rounded_trns"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/enter_pdf_file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="308dp"
        android:ems="10"
        android:hint="@string/pdf_file_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorAccent" />
</RelativeLayout>