<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp">

    <LinearLayout
        android:id="@+id/linearLayoutView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="26dp"
                android:layout_height="match_parent"
                android:layout_alignStart="@+id/linearLayoutView"
                android:background="@mipmap/pdf_file" />

            <TextView
                android:id="@+id/document_receive_name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/file_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fromtextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waiting_signature_from"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/send_userName_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/prompt_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>